--- a/src/store-1-main/1-ui-main/App.module.css
+++ b/src/store-1-main/1-ui-main/App.module.css
@@ -1,1 +1,28 @@
+.appbar{
+    background-image: url(https://krot.info/uploads/posts/2020-01/1579696448_52-p-gradientnie-zadnie-foni-115.jpg);
+    height: 100px
+}
+.link:hover{
+    color: rgba(0, 0, 0, 0.37);
+}
+
+input.form{
+    display: inline-block;
+    width: 20px;
+    padding: 5px
+
+}
+
+.item_menu{
+    padding: 20px;
+    text-transform: uppercase;
+    font-size: 13px;
+    
+}
+
+.item_menu span{
+    margin-left: 10px;
+    
+}
+
 
