--- a/src/store-2-features/Store/product-1-ui/Store.module.css
+++ b/src/store-2-features/Store/product-1-ui/Store.module.css
@@ -1,5 +1,11 @@
-.products_img img{
-    height: 200px
+.container_grid{
+    margin: auto
+}
+
+.container_item{
+    width: 345px;
+    height: 520px;
+   
 }
 
 a{
@@ -8,8 +14,8 @@ a{
 }
 
 .products_sort{
-    background-color: rgba(0, 0, 0, 0.116);
+    
     padding: 10px;
-    margin: 10px
+    margin-left: 90px
     
 }
