--- a/src/store-1-main/1-ui-main/App.module.css
+++ b/src/store-1-main/1-ui-main/App.module.css
@@ -1,6 +1,6 @@
 .appbar{
-    background-image: url(https://krot.info/uploads/posts/2020-01/1579696448_52-p-gradientnie-zadnie-foni-115.jpg);
-    height: 100px
+    background-color: rgb(132, 160, 201);
+    height: 70px
 }
 .link:hover{
     color: rgba(0, 0, 0, 0.37);
@@ -10,19 +10,24 @@ input.form{
     display: inline-block;
     width: 20px;
     padding: 5px
-
 }
 
 .item_menu{
     padding: 20px;
     text-transform: uppercase;
-    font-size: 13px;
-    
+    font-size: 13px;  
 }
 
 .item_menu span{
     margin-left: 10px;
-    
+}
+
+.title{
+    color: white
+}
+
+.title:hover{
+    color: rgba(255, 255, 255, 0.603)
 }
 
 
